[gd_scene load_steps=6 format=2]

[ext_resource path="res://Weapon/Bullet/bullet2.gd" type="Script" id=1]
[ext_resource path="res://Weapon/Bullet/bullet2.png" type="Texture" id=2]
[ext_resource path="res://Weapon/Bullet/Area2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 2 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["damage_group"]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="DieTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
